tests/rosetta/transpiler/Zig/carmichael-3-strong-pseudoprimes.error
zig build error: exit status 1
/tmp/TestMochiZigGoldencarmichael-3-strong-pseudoprimes1365549619/001/prog.zig:75:21: error: expected type 'i32', found 'usize'
/tmp/TestMochiZigGoldencarmichael-3-strong-pseudoprimes1365549619/001/prog.zig:75:21: note: signed 32-bit int cannot represent all possible unsigned 64-bit values
/tmp/TestMochiZigGoldencarmichael-3-strong-pseudoprimes1365549619/001/prog.zig:16:15: note: parameter type declared here
